--- a/_includes/themes/bootstrap/default.html
+++ b/_includes/themes/bootstrap/default.html
@@ -38,7 +38,7 @@
             {% assign pages_list = site.pages %}
             {% assign group = 'navigation' %}
             {% include JB/pages_list %}
-            {% assign about = site.about %}
+            <li><a href="about.html">About</a></li>
           </ul>
         </div>
       </div>
