--- a/_includes/themes/bootstrap/default.html
+++ b/_includes/themes/bootstrap/default.html
@@ -36,8 +36,8 @@
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav">
             {% assign pages_list = site.pages %}
-            {% assign group = 'navigation' %}
-            {% include JB/pages_list %}
+            <!-- >{% assign group = 'navigation' %}
+            {% include JB/pages_list %} -->
             <li><a href="about.html">About</a></li>
           </ul>
         </div>
