--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -3,17 +3,17 @@
         <ul>
         	<li>
         		{% if site.blog_index_asides.size %}
-					{% include_array blog_index_asides %}
-				{% else %}
-					{% include_array default_asides %}
-				{% endif %}
+					    {% include_array blog_index_asides %}
+				    {% else %}
+					    {% include_array default_asides %}
+				    {% endif %}
         	</li>
         	<li>
         		<ul>
-                    <li>Projects - <a href="http://www.alexharr.is" target="_blank">alexharr.is</a>
-        			<li>Github - <a href="http://www.github.com/alexharris" target="_blank">github.com/alexharris</a></li>
-                    <li>Twitter - <a href="http://www.twitter.com/alexharris6" target="_blank">@alexharris6</a></li>
-                    <li>Email - <a href="mailto:alexharris6@gmail.com" target="_blank">alexharris6 at gmail</a></li>
+              <li>Projects - <a href="http://www.alexharr.is" target="_blank">alexharr.is</a>
+        			<li>Github - <a href="http://www.github.com/{{site.github_user}}" target="_blank">github.com/{{site.github_user}}</a></li>
+              <li>Twitter - <a href="http://www.twitter.com/{{site.twitter_user}}" target="_blank">@{{site.twitter_user}}</a></li>
+              <li>Email - <a href="mailto:{{site.email}}" target="_blank">{{site.email}}</a></li>
         		</ul>
         	</li>
         </ul>
