--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -1,12 +1,9 @@
 @import "compass";
-
-@import "base";
-@import "parts";
-@import "plugins";
+@include global-reset;
 
 @import "custom/colors";
-@import "yinyang";
-
 @import "custom/fonts";
 @import "custom/layout";
+@import "base";
+@import "plugins/**/*";
 @import "custom/styles";
