--- a/source/_includes/article.html
+++ b/source/_includes/article.html
@@ -1,16 +1,27 @@
-{% if index %}
-	<h1 class="title" itemprop="name"><a href="{{ root_url }}{{ post.url }}" itemprop="url">{% if site.titlecase %}{{ post.title | titlecase }}{% else %}{{ post.title }}{% endif %}</a></h1>
-	<div class="entry-content" itemprop="articleBody">
-		{{ content | excerpt }}
-		{% capture excerpted %}{{ content | has_excerpt }}{% endcapture %}
-		{% if excerpted == 'true' %}<a href="{{ root_url }}{{ post.url }}" class="more-link">{{ site.excerpt_link }}</a>{% endif %}
-	</div>
-{% else %}
-  {% if page.featured %}
-    <img src={{ page.featured }} class="featured" />
+<header>
+  <div class="article-tags">
+      {% include post/categories.html %}
+  </div>
+  {% if index %}
+    <h1><a href="{{ root_url }}{{ post.url }}">
+      {% if site.titlecase %}{{ post.title | titlecase }}{% else %}{{ post.title }}{% endif %}
+    </a></h1>
+  {% else %}
+    <h1>
+      {% if site.titlecase %}{{ page.title | titlecase }}{% else %}{{ page.title }}{% endif %}
+    </h1>
   {% endif %}
-	<h1 class="title" itemprop="name">{% if site.titlecase %}{{ page.title | titlecase }}{% else %}{{ page.title }}{% endif %}</h1>
-  {% include post/date.html %}
-  <div class="post-date">{{ time }}</div>
-	<div class="entry-content" itemprop="articleBody">{{ content }}</div>
+</header>
+{% if index %}
+  <section>{{ content | excerpt }}</section>
+  {% capture excerpted %}{{ content | has_excerpt }}{% endcapture %}
+  {% if excerpted == 'true' %}
+  <footer>
+      <div class="article-date">
+        {% include post/date.html %}{% if updated %}{{ updated }}{% else %}{{ time }}{% endif %}</div>
+  </footer>
+  {% endif %}
+{% else %}
+  <section>{{ content }}</section>
 {% endif %}
+
