--- a/source/_includes/footer.html
+++ b/source/_includes/footer.html
@@ -1,2 +1,7 @@
-{% include custom/footer.html %}
-<p>Theme: <a href="https://github.com/qingwang/octopress-theme-yinyang">YinYang</a></p>
+<footer id="footer" class="her-row">
+  <div class="container">
+    <div class="row">
+      {% include custom/footer.html %}
+    </div>
+  </div>
+</footer>
