--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -1,23 +1,15 @@
 {% capture root_url %}{{ site.root | strip_slash }}{% endcapture %}
+<!DOCTYPE html>
+<!--[if IEMobile 7 ]><html class="no-js iem7"><![endif]-->
+<!--[if lt IE 9]><html class="no-js lte-ie8"><![endif]-->
+<!--[if (gt IE 8)|(gt IEMobile 7)|!(IEMobile)|!(IE)]><!--><html class="no-js" lang="en"><!--<![endif]-->
 {% include head.html %}
+  <body>
+    <a href="/" class="home-icon">
+      <img src="/images/home.png"/>
+    </a>
 
-<body>
-	<div class="container">
-		<div class="left-col">
-			<div class="intrude-less">
-			<header id="header" class="inner">{% include header.html %}</header>
-			</div>
-		</div>
-		<div class="mid-col">
-			{% unless page.banner == false %}
-				{% include banner.html %}
-			{% endunless %}
-			<div class="mid-col-container">
-				<div id="content" class="article-inner">{{ content | expand_urls: root_url }}</div>
-			</div>
-			<footer id="footer" class="inner">{% include footer.html %}</footer>
-			{% include after_footer.html %}
-		</div>
-	</div>
-</body>
+    {{ content | expand_urls: root_url }}
+    {% include footer.html %}
+  </body>
 </html>
