fixed pagination bug

--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,4 +1,4 @@
 <section>
   <h1>About Me</h1>
-  <p>A little something about me.</p>
+  <p>I'm Dave Stagner. At this point in my life, I'd mostly like to be recognized as the founder of <a href="http://congruence.io">Congruence</a>. </p>
 </section>
