--- a/source/_includes/custom/home_landing_row.html
+++ b/source/_includes/custom/home_landing_row.html
@@ -1,6 +1,6 @@
 <div id="about-me" class="col-md-offset-3 col-md-6">
   <h4>about me</h4>
-  <p>{{ site.description }}</p>
+  <p>I'm Dave Stagner. I do a lot of things, but the thing I most wnat to be known for right now is being the founder of <a href="http://congruence.io">Congruence</a>.</p>
   <div class="social-icon-list">
   	{% if site.twitter_user %}
     <a title="Twitter" href="https://twitter.com/{{ site.twitter_user }}"><img src="/images/glyphicons_social_31_twitter.png"/></a>
