--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
 
   {% include head.html %}
-
+ 
   <body>
 
     {% include header.html %}
@@ -14,6 +14,7 @@
     </div>
 
     {% include footer.html %}
+    {% include google-analytics.html %}
 
   </body>
 
